add a future feature, change date.

--- a/html/index.html
+++ b/html/index.html
@@ -219,6 +219,11 @@
                 Aiming for something like the Gaim log viewer.
               </li>
               <li>
+                Implement a feature where logs older than X days are automatically deleted. If you are using pykeylogger as
+                a backup against accidental deletions, you may not want to keep months-old stuff on disk, but only say, a day's
+                worth of stuff. Seems like it would be useful to add an option to specify maximum log age.
+              </li>
+              <li>
                 Improve behavior when logging international keyboard layouts. Right now I am not exactly sure how to properly log
                 things like accented and umlaut-ed vowels, etc, so our international users have to put up with less than perfect
                 logging.
@@ -269,7 +274,7 @@
         
 
           
-      <span id='time'>Last changed: Sep 22 2005 00:17</span>
+      <span id='time'>Last changed: Nov 23 2005 18:27</span>
     </div>
     <div id="foot">
       <br />
